修复渲染模板的问题

--- a/模板.html
+++ b/模板.html
@@ -13,7 +13,7 @@
 <body>
   <div class="wrap">
     <!-- 播放器主体区域 -->
-    <div class="play_wrap" id="player">
+    <div class="play_wrap" id="player" v-cloak>
       <div class="search_bar">
         <img src="images/player_title.png" alt="" />
         <!-- 搜索歌曲 -->
